constraint-templates-yr/allowed-registries-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRegistries
metadata:
  name: approved-registries
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds:
          - Pod

      - apiGroups: ["apps"]
        kinds:
          - Deployment

  parameters:
    registries:
      - "951734991809.dkr.ecr.ap-south-1.amazonaws.com/"
