constraint-templates-yr/deny-load-balancer-service-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyloadbalancer
spec:
  crd:
    spec:
      names:
        kind: K8sDenyLoadBalancer

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyloadbalancer

        violation[{"msg": msg}] {
          input.review.object.spec.type == "LoadBalancer"

          msg := sprintf(
            "Service '%v' of type LoadBalancer is not allowed",
            [input.review.object.metadata.name]
          )
        }
