constraint-templates-yr/denydefaultnamespace-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenydefaultnamespace
spec:
  crd:
    spec:
      names:
        kind: K8sDenyDefaultNamespace

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenydefaultnamespace

        violation[{"msg": msg}] {
          input.review.object.metadata.namespace == "default"
          msg := "Creation of resources in the default namespace is not allowed"
        }
