constraint-templates-yr/denydefaultnamespace-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyDefaultNamespace
metadata:
  name: deny-default-namespace-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
