constraint-templates-yr/required-readiness-probe-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirereadinessprobe
spec:
  crd:
    spec:
      names:
        kind: K8sRequireReadinessProbe

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirereadinessprobe

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"

          container := input.review.object.spec.containers[_]

          not container.readinessProbe

          msg := sprintf(
            "Container '%v' must define a readinessProbe",
            [container.name]
          )
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Deployment"

          container := input.review.object.spec.template.spec.containers[_]

          not container.readinessProbe

          msg := sprintf(
            "Container '%v' must define a readinessProbe",
            [container.name]
          )
        }
