constraint-templates-yr/required-resources-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-cpu-memory-requests
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds:
          - Pod

      - apiGroups: ["apps"]
        kinds:
          - Deployment
