constraint-templates-yr/required-resources-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresources

        containers[c] {
          c := input.review.object.spec.containers[_]
        }

        containers[c] {
          c := input.review.object.spec.template.spec.containers[_]
        }

        violation[{"msg": msg}] {
          c := containers[_]

          not c.resources.requests.cpu

          msg := sprintf(
            "Container '%v' must define CPU requests",
            [c.name]
          )
        }

        violation[{"msg": msg}] {
          c := containers[_]

          not c.resources.requests.memory

          msg := sprintf(
            "Container '%v' must define Memory requests",
            [c.name]
          )
        }
