constraint-templates-yr/restrict-max-replica-count-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxReplicas
metadata:
  name: max-10-replicas
spec:
  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system

    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]

  parameters:
    maxReplicas: 10
