constraint-templates-yr/restrict-max-replica-count-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8smaxreplicas
spec:
  crd:
    spec:
      names:
        kind: K8sMaxReplicas
      validation:
        openAPIV3Schema:
          type: object
          properties:
            maxReplicas:
              type: integer

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8smaxreplicas

        violation[{"msg": msg}] {
          replicas := input.review.object.spec.replicas
          max := input.parameters.maxReplicas

          replicas > max

          msg := sprintf(
            "Deployment '%v' requests %v replicas, maximum allowed is %v",
            [
              input.review.object.metadata.name,
              replicas,
              max
            ]
          )
        }
